--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "gineticus-theme",
+  "icon": "icon.png",
   "displayName": "Gineticus Theme",
   "description": "Gineticus Theme! :)",
   "version": "0.0.1",
+  "publisher": "Gineticus",
+  "author": "Gineticus (https://github.com/Gineticus)",
   "engines": {
     "vscode": "^1.88.0"
   },
